# ssvt

./: .gitignore  CHANGELOG.md  compareProperties.hs  labs.cabal
app/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Lab0.hs  Main.hs
app/Lab0/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  TestSuite.hs
app/Lab1/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs  TestSuite.hs
lab-exams/: CHANGELOG.md  RecurringQuestions.md  labs.cabal
lab-exams/app/: Exam01022023.hs  Exam11022022.hs  Exam25012024Max.hs  Exam25102023Max1.hs  Exam25102023Max2.hs  Exam25102023Olaf.hs  Exam27102021.hs  Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Helpers.hs  LTS.hs  Lecture2.hs  Main.hs  MultiplicationTable.hs
lab-template/: labs.cabal
lab-template/app/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise8.hs  Exercise9.hs  Lecture3.hs  Main.hs
lab0/: CHANGELOG.md  labs.cabal
lab0/app/: Exercise4.hs  Main.hs
lab1/: labs.cabal
lab1/app/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Exercise8.hs  Exercise9.hs  Main.hs
lab2/: labs.cabal
lab2/app/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  LTS.hs  Main.hs
lab3/: labs.cabal
lab3/app/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  FitSpec.hs  Main.hs  Mutation.hs  Namaak.hs
lab4/: labs.cabal
lab4/app/: Bonus1.hs  Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Exercise7.hs  Lecture6.hs  Main.hs  SetOrd.hs
