cabal-version:      2.4
name:               labs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Max Veerhoek
maintainer:         lmg@veerhoek.eu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable labs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Lab0.TestSuite,
                    Lab0.Exercise1,
                    Lab0.Exercise2,
                    Lab0.Exercise3,
                    Lab0.Exercise4,
                    Lab0.Exercise5,
                    Lab0.Exercise6,
                    Lab1.TestSuite,
                    Lab1.Exercise1,
                    Lab1.Exercise2,
                    Lab1.Exercise3,
                    Lab1.Exercise4,
                    Lab1.Exercise5,
                    Lab1.Exercise6,
                    Lab1.Exercise7,
                    Lab1.Exercise8,
                    Lab1.Exercise9,
                    Lecture2,
                    Lecture3,
                    SetOrd

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                      , QuickCheck ^>=2.14.2
                      , random ^>=1.2.1
                      , containers ^>= 0.6.7
    hs-source-dirs:   app
    default-language: Haskell2010
