cabal-version:      2.4
name:               lab
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Max Veerhoek
maintainer:         lmg@veerhoek.eu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable labs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Exam01022023,
                    Exam11022022,
                    Exam25102023Max1,
                    Exam25102023Max2,
                    Lecture1,
                    Lecture2,
                    Lecture3,
                    Lecture6,
                    LTS,
                    MultiplicationTable,
                    Mutation,
                    SetOrd,
                    FitSpec,
                    Helpers,
                    Exercise1,
                    Exercise2,
                    Exercise3,
                    Exercise4,
                    Exam25102023Olaf
                    Exam27102021
                    
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                      , QuickCheck ^>=2.14.2
                      , random ^>=1.2.1
                      , containers ^>= 0.6.7
                      , fitspec ^>= 0.4.1.0
    hs-source-dirs:   app
    default-language: Haskell2010